homeautom and docma file view

--- a/Templates/docma_home.html
+++ b/Templates/docma_home.html
@@ -23,7 +23,7 @@
 <div class="cards-holder">
 {% for i in doc_type %}
 <div class="doc-card">
-   <img class = 'di' src="  {% static 'fcon2.png' %}">
+   <img class = 'di' src="  {% static 'fcons.png' %}" >
     <a  href="doc_viewer/{{i}}/"> <h4 class="typetext"> {{i}} </h4> </a>
 </div>
 {% endfor %}
