--- a/Templates/Docma_viewer.html
+++ b/Templates/Docma_viewer.html
@@ -13,7 +13,7 @@
 <body class="page">
     <div class="nav-bar">
         <div class = "home">
-            <a href = '/home/'>Home /</a>
+            <a href = '/home/'>Home</a>
              <a href = '/doc_manager/'>Document Category</a>
         </div>
         <div class = "home-button">
