--- a/assets/dem/dem_dashboard.css
+++ b/assets/dem/dem_dashboard.css
@@ -373,6 +373,82 @@ border-radius:10px;
 
 
 
+.popup-overlay {
+display:flex;
+position:fixed;
+align-items:center;
+justify-content:center;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.7);
+}
+
+.popup-container{
+display:flex;
+justify-content:center;
+flex-direction:column;
+background: #383839;
+width : 680px;
+height:70vh;
+border-radius:10px;
+padding:10px;
+}
+
+
+.popup-head{
+display:flex;
+align-items:center;
+justify-content:space-between;
+background-color : #36454F;
+border-radius:10px;
+height:4vh;
+padding: 0px 20px;
+padding-left:50px;
+font-size: 30px;
+color:var(--font_colour);
+}
+
+
+.popup-content{
+display:flex;
+align-items: flex-start;
+justify-content:space-around;
+margin-top:5px;
+background-color : #36454F;
+border-radius:10px;
+height:70vh;
+font-size: 35px;
+color:var(--font_colour);
+}
+
+.popup-content-sub {
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+margin-top:50px;
+}
+
+.popup-content-field {
+display:flex;
+align-items:center;
+justify-content:space-between;
+width :100%;
+margin:10px;
+margin-top:30px;
+transform:scale(1.1);
+}
+
+.popup-content-field input {
+height:30px;
+width:200px;
+font-size: 25px;
+font-weight: bold;
+}
+
+
 
 
 
