storec small colour correction

--- a/assets/medtrac/storec_dashboard.css
+++ b/assets/medtrac/storec_dashboard.css
@@ -1,8 +1,8 @@
 :root {
-    --background:#191D26;
-    --card-color:yellow;
+    --background:#322C2B;
+    --card-color:#AF8260;
     --card-header-text:black;
-    --card-header-background:blue;
+    --card-header-background:#803D3B;
 }
 
 body {
