--- a/Templates/storec_dashboard.html
+++ b/Templates/storec_dashboard.html
@@ -22,9 +22,9 @@
             <label> Max Buy Point : {{details.buy_call.0}}</label>
             <label> Sell Point : {{details.sell_call.1}}</label>
             <label> Buy Point : {{details.buy_call.1}}</label>
-            <label>Average Fluctuations {{details.7_Days_AHL.0}}</label>
-            <label>Max Fluctuations {{details.7_Days_AHL.1}}</label>
-            <label>Min Fluctuations {{details.7_Days_AHL.2}}</label>
+            <label>Average Fluctuations {{details.7_Days_AHL.0}} %</label>
+            <label>Max Fluctuations {{details.7_Days_AHL.1}} %</label>
+            <label>Min Fluctuations {{details.7_Days_AHL.2}} %</label>
 
 
         </div>
