--- a/assets/medtrac/storec_dashboard.css
+++ b/assets/medtrac/storec_dashboard.css
@@ -53,3 +53,19 @@ font-weight: bold;
 display:flex;
 margin:7px;
 }
+
+.nav-bar {
+display:flex;
+align-items:center;
+justify-content: space-around;
+margin-top:30px;
+height:40px;
+background-color:var(--card-header-background);
+
+}
+
+
+.nav-bar button {
+height:28px;
+}
+
