--- a/assets/general_apps/dashboard_styles.css
+++ b/assets/general_apps/dashboard_styles.css
@@ -124,8 +124,8 @@ margin:10px;
 }
 
 .location-view {
-display:grid;
-grid-template-columns: repeat(3, 1fr);
+display:flex;
+flex-direction:column;
 width:100%;
 justify-content:space-around;
 margin:10px;
